--- a/anthos-bm-gcp-terraform/Makefile
+++ b/anthos-bm-gcp-terraform/Makefile
@@ -22,11 +22,15 @@ apply: init
 	$(call header,$@)
 	@scripts/tf-wrapper.sh $@ -auto-approve
 
+.PHONY: output
+output:
+	$(call header,$@)
+	@scripts/tf-wrapper.sh $@
+
 .PHONY: destroy
 destroy: init validate
 	$(call header,$@)
 	@scripts/tf-wrapper.sh $@ -auto-approve
-
 
 .PHONY: clean
 clean:
